# SRO-RTDP

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  build.xml  pyproject.toml  setup.py  start.yaml  test.sh
rtdp/: CMakeLists.txt  README.md  __init__.py
rtdp/WIP_containers/cpu_emu_docker/: Dockerfile  README.md
rtdp/WIP_containers/cpu_emu_docker/cylc/: config.yml
rtdp/WIP_containers/cpu_emu_docker/example/: send_data.sh
rtdp/WIP_cylc/cli/: MANIFEST.in  run_rtdp.py  test.sh
rtdp/WIP_cylc/cpu_emu_cylc/: cli-config-example.yml  generate_and_run.sh
rtdp/WIP_cylc/cpu_emu_local_example/: local_test.sh  test_components.sh
rtdp/WIP_cylc/gpu_cylc/: build.sh  cli-config-example.yml  generate_and_run.sh  global.cylc  install.sh
rtdp/chain_cpu_gpu/: Dockerfile  generate_flow.py  requirements.txt  run_generate_flow.sh
rtdp/chain_cpu_gpu/.devcontainer/: devcontainer.json
rtdp/chain_cpu_gpu/cylc/: README.md  build.sh  chain_config.yaml  flow.cylc  generate_flow.py  global.cylc  install.sh
rtdp/cli/: MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt  resource_manager.py  rtdp  rtdp_entry.py  rtdp_workflow_cli.py  rtdpcli.py  setup.py  sif_cache.py  test.sh  test_cli_documentation_help.py  test_cli_extensibility.py  test_cli_workflow_execution.py  test_cli_workflow_generation.py  test_cli_workflow_management.py  test_cli_workflow_monitoring.py  test_multi_configs.py  test_multi_gpu_with_nodelist.yml
rtdp/cli/cylc/multi_cpu_emu/: flow.cylc.j2  flow.cylc.separate.j2
rtdp/cli/cylc/multi_gpu_proxy/: flow.cylc.j2  flow.cylc.separate.j2
rtdp/cli/cylc/multi_mixed/: flow.cylc.j2  test_config.yml
rtdp/cli/prd/: RTDP_Cylc_CLI_Checklist.md  rtdp_workflow_cli_flowchart.md  rtdp_workflow_cli_prd.md
rtdp/cmake/: FindYAML.cmake  FindZeroMQ.cmake
rtdp/cpp/cpu_emu/: Dockerfile  README.docker.md  README.md  buffer_packet.hh  buffer_packet_emu.hh  buffer_packet_zmq_emu.py  buffer_packet_zmq_sim.py  buildp  cpu_emu.cc  cpu_emu.yaml  cpu_sim.cc  cpu_sim.yaml  emu_rprt.ipynb  emu_rprt.sh  emulate_sender-zmq.py  launcher_py_cpu_emu.py  launcher_py_cpu_emu_chain.py  launcher_py_cpu_sim_chain.py  rtdp.py  rtdp.txt  sim_rprt.ipynb  sim_rprt.sh  simulate_sender-zmq-emu.py  simulate_sender-zmq.py  zmq-event-clnt.cc  zmq-event-emu-clnt.cc
rtdp/cpp/cpu_emu/cylc/: README.md  build.sh  flow.cylc  flow.cylc.j2  generate_and_run.sh  global.cylc  install.sh
rtdp/cpp/cpu_emu/example/: local_test.sh
rtdp/cpp/cpu_emu_docker/: Dockerfile  README.md  build.sh  buildp  cpu_emu.cc  cpu_emu.yaml
rtdp/cpp/cpu_emu_docker/apptainer/: README.md  build.sh  cpu-emu.def
rtdp/cpp/cpu_emu_docker/cylc/: README.md  build.sh  cleanup.sh  flow.cylc  install.sh
rtdp/cpp/cpu_emu_docker/example/: README.md  send_data.sh  start_cpu_emu.sh  start_receiver.sh
rtdp/cpu_emu/: buffer_packet.hh
rtdp/cuda/gpu_proxy/: CMakeLists.txt  Dockerfile  README.container.md  README.md  gpuEmu.cu
rtdp/cuda/gpu_proxy/cylc/: README.md  build.sh  cleanup.sh  config.yml  flow.cylc  flow.cylc.j2  generate_and_run.sh  global.cylc  install.sh
rtdp/cuda/gpu_proxy/python_zmq_helper/: zmq_fp_receiver.py  zmq_fp_sender.py
rtdp/cylc/chain_workflow/: README.md  build.sh  cli-config-example.yml  flow.cylc  flow.cylc.j2  generate_and_run.sh  global.cylc  install.sh
rtdp/cylc/multi_cpu_emu/: example_config.yml  flow.cylc.j2  flow.cylc.separate.j2  test_config.yml
rtdp/cylc/multi_gpu_proxy/: example_config.yml  flow.cylc.j2  flow.cylc.separate.j2  test_config.yml
rtdp/cylc/multi_mixed/: example_config.yml  flow.cylc.j2  flow.cylc.separate.j2  test_config.yml
rtdp/cylc/scripts/emulator/: cpu_emu.sh
rtdp/cylc/scripts/proxy/: gpu_proxy.sh
rtdp/cylc/scripts/receiver/: receiver.sh
rtdp/cylc/scripts/sender/: sender.sh
rtdp/demo_run_log/: gpu_emu_k0_p55554_r55555_nvidarm.txt  gpu_emu_k1_p55555_r55556_nvidarm.txt  plot.py  sink_ejfat-6.txt
rtdp/gpu_proxy/: gpuEmu.cu
rtdp/gpu_proxy/python_zmq_helper/: zmq_fp_sender.py
rtdp/java/: config_demo_ersap.yml
rtdp/java/examples/helloworld/: README.md  helloworld.yaml
rtdp/python/: GPUEmulation.py  config_parser.py  dash_cyto.py  node_graph_demo.py  rdtp_grafana_nodegraph.py  rtdp.py  rtdp_config_parser.py  rtdp_dash_cyto.py
rtdp/python/generate_cylc/: README.md  app.py  components.py  docker-compose.yml  forms.py  generate_gui.py  generate_workflow.py  graph_generator.py  graph_widget.py  gui.py  requirements.txt  run.py  setup.cfg
rtdp/python/generate_cylc/.devcontainer/: Dockerfile  devcontainer.json
rtdp/python/generate_cylc/components/: Dockerfile  __init__.py  aggregator.py  base.py  build.sh  install.sh  load_balancer.py  receiver.py  sender.py  setup.py
rtdp/python/generate_cylc/cpu_emulator_docker/: buildp  cpu_emu.cc
rtdp/python/generate_cylc/docker_test/: docker-compose.yml
rtdp/python/generate_cylc/gui/: __init__.py  app.py  components.py  forms.py  graph_generator.py
rtdp/python/generate_cylc/templates/: base.html  index.html
rtdp/python/generate_cylc/wf-generator/: README.md  config_schema.yml  example_config.yml  generate_workflow.py  workflow_config.yml
rtdp/python/nodegraph/: REAMDE.md  demo_fabric_nvidarm-adm.py  fetch_cont_stats_rhel.sh  get_cont_ids_rhel.sh
rtdp/python/unconfirmed_generate_cylc/: requirements.txt
rtdp/python/unconfirmed_generate_cylc/components/: Dockerfile  README.md  install.sh  requirements.txt  sender.py
rtdp/python/unconfirmed_generate_cylc/cpu_emulator_docker/: Dockerfile
rtdp/python/unconfirmed_generate_cylc/gui/: graph_generator.py
rtdp/src/: demo_bash_operator_helper.bash
rtdp/src/cpu_emu/: README.md  buffer_packet_emu.hh  cpu_emu.cc  cpu_emu.yaml  cpu_sim.yaml  emulate.yaml  rtdp.py  zmq-event-emu-clnt.cc
rtdp/src/cpu_emu/example_logs/: processed_frame_info.csv  (+3 more)
rtdp/src/ersap-gui-editor/: README.md  VALIDATION_REPORT.md  debug_actor_topics.py  main.py  requirements.txt  test_position_preservation.py  test_routing_export_fix.py  test_yaml_format.py
rtdp/src/gpu_proxy/: CMakeLists.txt  WIP_README.md  gpuEmu.cu
rtdp/src/python_zmq_helper/: zmq_fp_receiver.py
(+538 files in other folders)
